[gd_scene load_steps=2 format=3 uid="uid://c2qn8xh5ml8vp"]

[ext_resource type="Script" path="res://scripts/loot/container.gd" id="1_container"]

[node name="Container" type="Control"]
custom_minimum_size = Vector2(340, 280)
layout_mode = 3
anchors_preset = 0
offset_right = 340.0
offset_bottom = 280.0
script = ExtResource("1_container")

[node name="ContainerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContainerLabel" type="Label" parent="ContainerPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "CARGO CONTAINER"
horizontal_alignment = 1

[node name="ItemsContainer" type="Control" parent="ContainerPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClosedOverlay" type="ColorRect" parent="ContainerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="OpenButton" type="Button" parent="ContainerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 16
text = "SEARCH"
